--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "git-squad"
 version = "0.1.0"
 edition = "2024"
-description = "A tool to manage pair or mob programming co-authors in Git commit messages"
+description = "Manage co-authors in git commit messages with ease"
 authors = ["Alexander Pankoff <ccntrq@screenri.de>"]
 
 [dependencies]
