--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,18 @@ version = "0.1.0"
 edition = "2024"
 description = "Manage co-authors in git commit messages with ease"
 authors = ["Alexander Pankoff <ccntrq@screenri.de>"]
+repository = "https://github.com/ccntrq/git-squad"
+license = "MIT"
+keywords = ["cli", "git", "pair-programming", "productivity"]
+categories =  ["command-line-utilities", "development-tools"]
+include = [
+    "**/*.rs",
+    "Cargo.toml",
+    "REAMDE.md",
+    "CHANGELOG.md",
+    "LICENSE",
+]
+
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
