--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ toml = "0.8"
 anyhow = "1.0"
 dirs = "6.0"
 regex = "1.11"
+nonempty = "0.11.0"
+inquire = "0.7.5"
 
 [dev-dependencies]
 assert_cmd = "2.0"
