--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ assert_cmd = "2.0"
 predicates = "3.1"
 tempfile = "3.20"
 test-case = "3.3"
+rexpect = "0.6"
+insta = { version = "1.43.1", features = ["yaml"] }
+insta-cmd = "0.6.0"
 
 [lints.clippy]
 all = "warn"
