--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ dirs = "6.0"
 regex = "1.11"
 nonempty = "0.11.0"
 inquire = "0.7.5"
+itertools = "0.14.0"
+num-bigint = "0.4.6"
+num-traits = "0.2.19"
 
 [dev-dependencies]
 assert_cmd = "2.0"
